[package]
name = "npng_crate"
version = "0.0.0-experimental"
edition = "2024"

authors = ["snowflakes14 <snowflakes1445@gmail.com>"]
description = "Rust implementation of an npng image encoding format"
license = "Apache-2.0"
categories = ["asynchronous", "encoding"]


[dependencies]
bincode = "2.0.1"
__tk_rt_private = {package = "tokio", version = "1.47.1", features = ["rt", "macros"], optional = true} # tokio is renamed
image = "0.25.8"
flate2 = "1.1.2"
thiserror =  "2.0.17"
rayon = "1.11.0"
crc32fast = "1.5.0"
zstd = "0.13.3"
log = "0.4.28"
bytes = "1.10.1"



[lib]
doctest = false


[features]
default = []
tokio_async = ["__tk_rt_private"]           # tokio async mode

# DO NOT USE "__tk_rt_private" FEATURE!!! USE "tokio_async"
