[package]
name = "npng_crate"
version = "0.0.0-experimental"
edition = "2024"

authors = ["snowflakes14 <snowflakes1445@gmail.com>"]
description = "Rust implementation of an npng image encoding format"
license = "Apache-2.0"
categories = ["asynchronous", "encoding"]


[dependencies]
bincode = "2.0.1"
__tk_rt_private = {package = "tokio", version = "1.47.1", features = ["rt", "macros"], optional = true} # tokio is renamed
image = "0.25.8"
rayon = "1.11.0"
crc32fast = "1.5.0"
log = { version = "0.4.28",optional = true }
bytes = "1.10.1"
npng_core = {git = "https://github.com/snowflakes14/npng", subdir = "npng_core"}



[lib]
doctest = false


[features]
default = []
tokio_async = ["__tk_rt_private"]           # tokio async mode

# DO NOT USE "__tk_rt_private" FEATURE!!! USE "tokio_async"
